manifests/cluster/dapr/helm-chart.yaml
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-api
  namespace: dapr
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-operator
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 443
    targetPort: 6500
    name: grpc
# Added for backwards compatibility where previous clients will attempt to
# connect on port 80.
# TOOD: @joshvanl: remove in v1.14

  - protocol: TCP
    port: 80
    targetPort: 6500
    name: legacy

  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dapr-webhook
  namespace: dapr
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 19443
    protocol: TCP
  selector:
    app: dapr-operator
---
# Source: dapr/charts/dapr_placement/templates/dapr_placement_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-placement-server
  namespace: dapr
  labels:
    app: dapr-placement-server
    app.kubernetes.io/component: placement
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-placement-server
  # placement must be able to resolve pod address to join initial cluster peers
  # before POD is ready
  publishNotReadyAddresses: true
  ports:
  - name: api
    port: 50005
  - name: raft-node
    port: 8201
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  clusterIP: None
---
# Source: dapr/charts/dapr_scheduler/templates/dapr_scheduler_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-scheduler-server-a
  namespace: dapr
  labels:
    app: dapr-scheduler-server
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-scheduler-server
  # scheduler must be able to resolve pod address to join initial cluster peers
  # before POD is ready
  publishNotReadyAddresses: true
  ports:
  - name: api
    port: 443
    targetPort: 50006
  - name: etcd-client
    port: 2379
  - name: etcd-peer
    port: 2380
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
---
# Source: dapr/charts/dapr_scheduler/templates/dapr_scheduler_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-scheduler-server
  namespace: dapr
  labels:
    app: dapr-scheduler-server
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-scheduler-server
  # scheduler must be able to resolve pod address to join initial cluster peers
  # before POD is ready
  publishNotReadyAddresses: true
  ports:
  - name: api
    port: 50006
  - name: etcd-client
    port: 2379
  - name: etcd-peer
    port: 2380
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  clusterIP: None # make the service headless
---
# Source: dapr/charts/dapr_sentry/templates/dapr_sentry_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-sentry
  namespace: dapr
  labels:
    app.kubernetes.io/component: sentry
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-sentry
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 443
    targetPort: 50001
    name: grpc
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dapr-sidecar-injector
  namespace: dapr
  labels:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/"
spec:
  selector:
    app: dapr-sidecar-injector
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
    name: https
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-operator
  namespace: dapr
  labels:
    app: dapr-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-operator
  template:
    metadata:
      labels:
        app: dapr-operator
        app.kubernetes.io/component: operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dapr
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.15.5
      annotations:
        dapr.io/control-plane: operator
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-operator
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/operator:1.15.5"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 6500
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
        - name: dapr-trust-bundle
          mountPath: /var/run/secrets/dapr.io/tls
          readOnly: true
        - name: dapr-identity-token
          mountPath: /var/run/secrets/dapr.io/sentrytoken
          readOnly: true
        # This is not needed in debug mode because the root FS is writable
        - name: dapr-operator-tmp
          mountPath: /tmp
        command:
        - "/operator"
        args:
        - "--watch-interval"
        - "0"
        - "--max-pod-restarts-per-minute"
        - "20"
        - "--log-level"
        - "info"
        - "--trust-anchors-file"
        - "/var/run/secrets/dapr.io/tls/ca.crt"
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
      serviceAccountName: dapr-operator
      volumes:
        - name: dapr-operator-tmp
          emptyDir:
            sizeLimit: 64Mi
            medium: Memory
        - name: dapr-trust-bundle
          configMap:
            name: dapr-trust-bundle
        - name: dapr-identity-token
          projected:
            sources:
            - serviceAccountToken:
                path: token
                expirationSeconds: 600
                audience: "spiffe://cluster.local/ns/dapr/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_sentry/templates/dapr_sentry_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-sentry
  namespace: dapr
  labels:
    app: dapr-sentry
    app.kubernetes.io/component: sentry
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-sentry
  template:
    metadata:
      labels:
        app: dapr-sentry
        app.kubernetes.io/component: sentry
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dapr
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.15.5
      annotations:
        dapr.io/control-plane: sentry
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-sentry
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/sentry:1.15.5"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 50001
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
          - name: credentials
            mountPath: /var/run/secrets/dapr.io/credentials
            readOnly: true
        command:
        - "/sentry"
        args:
        - "--mode"
        - "kubernetes"
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--trust-domain"
        - cluster.local
      serviceAccountName: dapr-sentry
      volumes:
        - name: credentials
          secret:
            secretName: dapr-trust-bundle
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-sidecar-injector
  namespace: dapr
  labels:
    app: dapr-sidecar-injector
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-sidecar-injector
  template:
    metadata:
      labels:
        app: dapr-sidecar-injector
        app.kubernetes.io/component: sidecar-injector
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dapr
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.15.5
      annotations:
        dapr.io/control-plane: injector
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      serviceAccountName: dapr-injector
      containers:
      - name: dapr-sidecar-injector
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/injector:1.15.5"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        command:
        - "/injector"
        args:
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--healthz-port"
        - "8080"
        ports:
        - name: https
          containerPort: 4000
          protocol: TCP
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
        - name: dapr-trust-bundle
          mountPath: /var/run/secrets/dapr.io/tls
          readOnly: true
        - name: dapr-identity-token
          mountPath: /var/run/secrets/dapr.io/sentrytoken
          readOnly: true
      volumes:
      - name: dapr-trust-bundle
        configMap:
          name: dapr-trust-bundle
      - name: dapr-identity-token
        projected:
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 600
              audience: "spiffe://cluster.local/ns/dapr/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
---
# Source: dapr/charts/dapr_placement/templates/dapr_placement_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dapr-placement-server
  namespace: dapr
  labels:
    app: dapr-placement-server
    app.kubernetes.io/component: placement
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  replicas: 1
  serviceName: dapr-placement-server
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: dapr-placement-server
  template:
    metadata:
      labels:
        app: dapr-placement-server
        app.kubernetes.io/component: placement
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dapr
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.15.5
      annotations:
        dapr.io/control-plane: placement
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-placement-server
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/placement:1.15.5"
        imagePullPolicy: IfNotPresent
        resources:
          {}
        volumeMounts:
          - name: dapr-trust-bundle
            mountPath: /var/run/secrets/dapr.io/tls
            readOnly: true
          - name: dapr-identity-token
            mountPath: /var/run/secrets/dapr.io/sentrytoken
        ports:
          - containerPort: 50005
            name: api
          - containerPort: 8201
            name: raft-node
          - name: metrics
            containerPort: 9090
            protocol: TCP
        command:
        - "/placement"
        args:
        - "--log-level"
        - info
        - "--replicationFactor=100"
        - "--max-api-level=10"
        - "--min-api-level=0"
        - "--keepalive-time=2s"
        - "--keepalive-timeout=3s"
        - "--disseminate-timeout=2s"
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--tls-enabled"
        - "--trust-domain=cluster.local"
        - "--trust-anchors-file=/var/run/secrets/dapr.io/tls/ca.crt"
        - "--sentry-address=dapr-sentry.dapr.svc.cluster.local:443"
        - "--mode=kubernetes"
        securityContext:
          runAsUser: 0
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      serviceAccountName: dapr-placement
      volumes:
      - name: dapr-trust-bundle
        configMap:
          name: dapr-trust-bundle
      - name: dapr-identity-token
        projected:
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 600
              audience: "spiffe://cluster.local/ns/dapr/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_scheduler/templates/dapr_scheduler_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dapr-scheduler-server
  namespace: dapr
  labels:
    app: dapr-scheduler-server
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
spec:
  replicas: 3
  serviceName: dapr-scheduler-server
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: dapr-scheduler-server
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: dapr-scheduler-data-dir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: 
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      labels:
        app: dapr-scheduler-server
        app.kubernetes.io/component: scheduler
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dapr
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.15.5
      annotations:
        dapr.io/control-plane: scheduler
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      securityContext:
        fsGroup: 65532
      containers:
      - name: dapr-scheduler-server
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/scheduler:1.15.5"
        imagePullPolicy: IfNotPresent
        resources:
          {}
        volumeMounts:
          - name: dapr-scheduler-data-dir
            mountPath: /var/run/data/dapr-scheduler/
            readOnly: false
          - name: dapr-scheduler-writeable-identity
            mountPath: /tmp
          - name: dapr-trust-bundle
            mountPath: /var/run/secrets/dapr.io/tls
            readOnly: true
          - name: dapr-identity-token
            mountPath: /var/run/secrets/dapr.io/sentrytoken
        ports:
          - containerPort: 50006
          - containerPort: 2379
            name: etcd-client
          - containerPort: 2380
            name: etcd-peer
          - name: metrics
            containerPort: 9090
            protocol: TCP
        command:
        - "/scheduler"
        args:
        - "--listen-address=0.0.0.0"
        - "--id"
        - "$(SCHEDULER_ID)"
        - "--etcd-initial-cluster"
        - "dapr-scheduler-server-0=https://dapr-scheduler-server-0.dapr-scheduler-server.dapr.svc:2380,dapr-scheduler-server-1=https://dapr-scheduler-server-1.dapr-scheduler-server.dapr.svc:2380,dapr-scheduler-server-2=https://dapr-scheduler-server-2.dapr-scheduler-server.dapr.svc:2380"
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--etcd-client-port"
        - "2379"
        - "--etcd-data-dir=/var/run/data/dapr-scheduler/dapr/$(SCHEDULER_ID)"
        - "--etcd-space-quota=9.2E"
        - "--etcd-compaction-mode=periodic"
        - "--etcd-compaction-retention=10m"
        - "--etcd-snapshot-count=10000"
        - "--etcd-max-snapshots=10"
        - "--etcd-max-wals=10"
        - "--etcd-backend-batch-limit=5000"
        - "--etcd-backend-batch-interval=50ms"
        - "--etcd-experimental-bootstrap-defrag-threshold-megabytes=100"
        - "--etcd-metrics=basic"
        - "--tls-enabled"
        - "--trust-domain=cluster.local"
        - "--trust-anchors-file=/var/run/secrets/dapr.io/tls/ca.crt"
        - "--sentry-address=dapr-sentry.dapr.svc.cluster.local:443"
        - "--mode=kubernetes"
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      serviceAccountName: dapr-scheduler
      volumes:
      - name: dapr-scheduler-writeable-identity
        emptyDir: {}
      - name: dapr-trust-bundle
        configMap:
          name: dapr-trust-bundle
      - name: dapr-identity-token
        projected:
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 600
              audience: "spiffe://cluster.local/ns/dapr/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dapr-scheduler-server
              topologyKey: topology.kubernetes.io/zone
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_webhook_config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: dapr-sidecar-injector
  labels:
    app: dapr-sidecar-injector
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dapr
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.15.5
webhooks:
- name: sidecar-injector.dapr.io
  reinvocationPolicy: IfNeeded
  clientConfig:
    service:
      namespace: dapr
      name: dapr-sidecar-injector
      path: "/mutate"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - pods
    operations:
    - CREATE
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
